1_hello_world/log
helloworld.cpp: In function ‘int main()’:
helloworld.cpp:9:5: error: ‘d’ was not declared in this scope
    9 |     d
      |     ^
